--- a/intro-practice/styles/styles.css
+++ b/intro-practice/styles/styles.css
@@ -1,3 +1,4 @@
+
 body
 {
     text-align: center;
@@ -13,6 +14,7 @@ a
 {
     color: white;
     margin: 50px;
+    font-size: 1.5em;
 }
 
 h1
@@ -22,12 +24,15 @@ h1
 
 img
 {
-    width: 800px;
+    width: 80%;width: 80%;
+    display: block;
+    margin: 0 auto;
     border: 4px solid steelblue;
 }
 
 p
 {
+    width: 80%;
     padding: 10px;
 }
 
@@ -43,6 +48,28 @@ footer
 }
 
 #active {
+    background-color: white;
+    color: steelblue;
+}
+
+main p {
+    width: 80%;
+    margin: 50px auto;
+    text-align: center;
+}
+
+nav, footer {
+    background-color: steelblue;
+    color: white;
+    padding: 10px;
+}
+
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
+}
+
+a:hover {
     background-color: white;
     color: steelblue;
 }
