--- a/intro-practice/styles/styles.css
+++ b/intro-practice/styles/styles.css
@@ -2,12 +2,14 @@
 body
 {
     text-align: center;
+    margin: 1%
 }
 
 nav
 {
     background-color: steelblue;
-    padding: 10px;
+    padding: 25px;
+    border-radius: 10px;
 }
 
 a
@@ -15,11 +17,13 @@ a
     color: white;
     margin: 50px;
     font-size: 1.5em;
+    padding: 25px;
 }
 
 h1
 {
     color: steelblue;
+    margin: 50px 0;
 }
 
 img
@@ -28,6 +32,7 @@ img
     display: block;
     margin: 0 auto;
     border: 4px solid steelblue;
+    border-radius: 10px;
 }
 
 p
@@ -40,6 +45,7 @@ footer
 {
     background-color: steelblue;
     color: white;
+    border-radius: 10px;
 }
 
 .main-para {
@@ -61,12 +67,13 @@ main p {
 nav, footer {
     background-color: steelblue;
     color: white;
-    padding: 10px;
+    padding: 25px;
 }
 
 footer p {
     font-size: 20px;
     margin: 20px auto;
+    padding: 25px;
 }
 
 a:hover {
