--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -32,13 +32,6 @@ main section
     color:indigo;
 }
 
-#background
-{
-    height: 725px;
-    background-color:darkturquoise;
-    padding: 35px;
-}
-
 body
 {
     background-color: #4AFFF5;
@@ -52,6 +45,8 @@ body
 header
 {
     background-color:aliceblue;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 nav a:hover
@@ -76,20 +71,15 @@ nav a:hover
     color:black;
 }
 
-.msg
-{
-    background-color:azure;
-    line-height: 1.5em;
-    padding: 35px;
-    margin-top: 200px;
-}
-
 footer
 {
     background-color: aliceblue;
     color:crimson;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .msg h2
@@ -134,11 +124,6 @@ footer a:hover
     width: 80px;
 }
 
-.card-img
-{
-    border: 10px solid #FCC386
-}
-
 footer p a 
 {
     text-decoration: none;
@@ -158,6 +143,8 @@ h2
 #logo_link   
 {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 footer .social img   
@@ -176,11 +163,6 @@ main section img
     box-sizing: border-box;
 }
 
-.mountains
-{
-    margin-top: 200px;
-}
-
 #hero-img
 {
    padding-right: 0;
@@ -197,3 +179,152 @@ main section img
     padding-bottom: 100px;
 }
 
+nav 
+{
+    display: flex;
+    justify-content: space-around;
+}
+
+#hero 
+{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    
+}
+
+#hero-box 
+{
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+
+#hero-msg
+{
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.home-grid
+{
+    display: grid;
+    grid-template-columns: repeat(11,1fx);
+}   
+
+.card-img, .mountains 
+{
+    width: 100%;
+}
+
+.rivers-card
+{
+    /*  from column lines 2–4 and row lines 2–3 */
+    grid-column: 2/4;
+    grid-row: 2/3;
+} 
+
+.camping-card
+{
+    /* from column lines 5–7 and row lines 2–3 */
+    grid-column: 5/7;
+    grid-row: 2/3;
+} 
+
+.rapids-card 
+{
+    /* from column lines 8–10 and row lines 2–3 */
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background
+{
+    height: 725px;
+    background-color:darkturquoise;
+    padding: 35px;
+    /* from column lines 1–11 and row lines 4–9 */
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.mountains
+{
+    margin-top: 200px;
+    /* from column lines 2–7 and row lines 5–8 */
+    grid-column: 2/7;
+    grid-row: 5/8;
+    width: 100%;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg
+{
+    background-color:azure;
+    line-height: 1.5em;
+    padding: 35px;
+    margin-top: 200px;
+    /* from column lines 6–10 and row lines 6–7 */
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img 
+{
+    border: 10px solid #FCC386;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover 
+{
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+* {
+    border: 2px solid blue;
+}
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
