--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -207,7 +207,7 @@ nav
 .home-grid
 {
     display: grid;
-    grid-template-columns: repeat(11,1fx);
+    grid-template-columns: repeat(10,1fx);
 }   
 
 .card-img, .mountains 
@@ -281,9 +281,10 @@ nav
     transform: scale(1.1);
 }
 
-* {
+/* * {
     border: 2px solid blue;
 }
+*/
 
 
 
