--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -204,11 +204,11 @@ nav
     grid-row: 1/2;
 }
 
-.home-grid
+.home-grid 
 {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto ;
-}   
+    grid-template-columns: repeat(10, 1fr);
+}  
 
 .card-img, .mountains 
 {
