--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -333,7 +333,68 @@ Rivers css start
 Rivers css end 
 */
 
+.contactus_title
+{
+    text-align: center;
+}
 
+/*
+Contact Us css Start 
+*/
+
+textarea 
+{
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: left;
+  }
+
+  form  {
+    margin: auto;
+    margin-top: 1em;
+    border: 1px solid rgb(46, 11, 245);
+    border-radius: 1em;
+    width: 500px;
+    padding: 1em;
+  }
+
+  input,textarea,button
+  {
+    width: 300px;
+    box-sizing: border-box;
+  }
+
+  button
+  {
+    height: 3em;
+  }
+
+  #feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+
+/*
+Contact Us css End 
+*/
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
