--- a/myaccounts/styles/style.css
+++ b/myaccounts/styles/style.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.google.com/specimen/Ubuntu?Family=Ubuntu');
 
+#content
+{
+    max-width: 1600px;
+    
+}
 
 body
 {
     font-family:Arial, Helvetica, sans-serif
 }
+
 nav 
 {
     display: flex;
