--- a/myaccounts/styles/style.css
+++ b/myaccounts/styles/style.css
@@ -1,14 +1,22 @@
-@import url('https://fonts.google.com/specimen/Ubuntu?Family=Ubuntu');
+
+@font-face 
+{
+    font-family: Ubuntu;
+    src: url(https://fonts.google.com/specimen/Ubuntu?Family=Ubuntu);
+
+    font-family: OpenSans;
+    scr: url(https://fonts.google.com/specimen/Open+Sans?query=+Open+Sans);
+  }
 
 #content
 {
     max-width: 1600px;
-    
+
 }
 
 body
 {
-    font-family:Arial, Helvetica, sans-serif
+    font-family:OpenSans, Helvetica, sans-serif;
 }
 
 nav 
@@ -31,6 +39,7 @@ header
     background-color:#2BEC2B;
     display: grid;
     grid-template-columns: 150px auto;
+    font-family:Ubuntu;
 }
 
 nav a:hover
